# typal-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/typal/: any.py  bools.py  bytes.py  collections.py  dates.py  datetimes.py  dicts.py  enums.py  floats.py  functionals.py  integers.py  maps.py  paths.py  primitives.py  strings.py  tuples.py  unions.py  uuids.py
tests/: test_aliases.py  test_functionals.py  test_imports.py
