[project]
name = "typal"
version = "0.1.1"
description = "A lightweight collection of typing helpers, aliases, protocols, and foundational type utilities for modern Python applications."
authors = [
    { name = "Agra Bima Yuda", email = "hub.agrayuda@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/typal"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

ignore = []

[tool.pyright]
pythonVersion = "3.14"
reportMissingTypeStubs = false
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]